# pii-redacter

./: .gitignore  README.md  helloworld.py  requirements.txt  todo.md
backend/: app.py  db.py  files.db  helloworld.py  pyproject.toml  redacter-463315-a5d37ec88911.json  requirements.txt
backend/output/test_run/: 01-text-mask
backend/pdf/: DocumentData.py  GoogleDocumentAI.py  NewPIIDetector.py  OCREngine.py  PDFAdapter.py  PDFProcessor.py  PDFRedactor.py  PIIDetector.py  PageData.py  PiiDetector.py  __init__.py  logger_config.py  ocrtest
backend/pdf/output/credit-app-3_20250625_213333/: document_text.txt  pii.txt  tokens.txt
backend/pdf/test_data/cache/: credit-app-3.json
backend/pdf/test_data/json_outputs/: credit-app-1.json
backend/tests/: __init__.py  test_DocumentData.py  test_PDFAdapter.py  test_PIIDetector.py
backend/writeups/: ocr_project_example.md  pdf_output.json  pdf_output.md  pii_detection.md  pii_detection_strategy_multiwords.md
